chamada api corrigida

--- a/notebooks/IAD006_Arvores_EX6_API_Client.ipynb
+++ b/notebooks/IAD006_Arvores_EX6_API_Client.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../imagens/imagem_negativa.png -> \n",
-      "../imagens/imagem_positiva.png -> \n",
-      "../imagens/imagem_positiva_ruido.png -> \n"
+      "../imagens/imagem_negativa.png -> {'detail': [{'type': 'model_attributes_type', 'loc': ['body'], 'msg': 'Input should be a valid dictionary or object to extract fields from', 'input': [[15, 11, 10, 5, 6, 5, 16, 13, 12, 0, 11, 9, 11, 5, 12, 10, 9, 15, 11, 5, 14, 12, 10, 6, 3, 6, 14, 15, 7, 0, 0, 12, 9, 10, 4, 9, 6, 9, 3, 9, 9, 5, 9, 12, 3, 3, 12, 12, 6, 10, 13, 10, 7, 2, 7, 10, 3, 2, 13, 13, 12, 14, 14, 8]]}]}\n",
+      "../imagens/imagem_positiva.png -> {'detail': [{'type': 'model_attributes_type', 'loc': ['body'], 'msg': 'Input should be a valid dictionary or object to extract fields from', 'input': [[0, 0, 5, 13, 9, 1, 0, 0, 0, 0, 13, 16, 10, 16, 5, 0, 0, 3, 16, 2, 0, 11, 8, 0, 0, 4, 12, 0, 0, 8, 8, 0, 0, 5, 8, 0, 0, 9, 8, 0, 0, 4, 11, 0, 1, 12, 7, 0, 0, 2, 14, 5, 10, 12, 0, 0, 0, 0, 6, 13, 10, 0, 0, 0]]}]}\n",
+      "../imagens/imagem_positiva_ruido.png -> {'detail': [{'type': 'model_attributes_type', 'loc': ['body'], 'msg': 'Input should be a valid dictionary or object to extract fields from', 'input': [[0, 0, 5, 13, 9, 1, 0, 0, 0, 0, 13, 15, 10, 16, 5, 0, 0, 3, 15, 2, 0, 11, 8, 0, 0, 4, 12, 0, 0, 8, 8, 0, 0, 5, 8, 0, 0, 9, 8, 0, 0, 4, 11, 0, 1, 12, 7, 0, 0, 2, 15, 5, 10, 12, 0, 0, 0, 0, 6, 13, 11, 0, 0, 0]]}]}\n"
      ]
     },
     {
@@ -27,6 +27,7 @@
    ],
    "source": [
     "import requests\n",
+    "import json\n",
     "import os, cv2\n",
     "import base64\n",
     "import matplotlib.pyplot as plt\n",
@@ -62,9 +63,13 @@
     "        #}\n",
     "\n",
     "        #Se a imagem foi carregada corretamente faz o request para a API\n",
+    "\n",
+    "        # Converter o array para uma lista e a lista para JSON\n",
+    "        gray16_json = json.dumps(gray16.reshape(1, -1).tolist())\n",
+    "\n",
     "        try:\n",
-    "            #resp = requests.post(url, data=gray16)\n",
-    "            print(f\"{arquivo} -> \")#{resp.json()}\")\n",
+    "            resp = requests.post(url, data=gray16_json, headers={'Content-Type': 'application/json'})\n",
+    "            print(f\"{arquivo} -> {resp.json()}\")\n",
     "        except requests.exceptions.HTTPError as http_err:\n",
     "            print(f\"{arquivo} -> erro de HTTP: {http_err}\")\n",
     "        except requests.exceptions.ConnectionError as conn_err:\n",
