--- a/notebooks/cliente.ipynb
+++ b/notebooks/cliente.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
     "import io\n",
     "\n",
     "img = Image.open('/workspaces/mba-deeplearning-iad-006-2024-public/imagens/imagem_negativa.png')\n",
-    "img = img.resize((8,8))\n",
+    "#img = img.resize((8,8))\n",
     "\n",
     "buffered = io.BytesIO()\n",
     "img.save(buffered, format=\"PNG\")\n",
