--- a/notebooks/IAD006_Arvores_EX6_API_Client.ipynb
+++ b/notebooks/IAD006_Arvores_EX6_API_Client.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -10,11 +10,11 @@
      "output_type": "stream",
      "text": [
       "200\n",
-      "{'data': [[15, 11, 10, 5, 6, 5, 16, 13, 12, 0, 11, 9, 11, 5, 12, 10, 9, 15, 11, 5, 14, 12, 10, 6, 3, 6, 14, 15, 7, 0, 0, 12, 9, 10, 4, 9, 6, 9, 3, 9, 9, 5, 9, 12, 3, 3, 12, 12, 6, 10, 13, 10, 7, 2, 7, 10, 3, 2, 13, 13, 12, 14, 14, 8]], 'predict': [1], 'description': 'Resultado da previsao.', 'details': 'Profundidade 12'}\n",
+      "[2]\n",
       "200\n",
-      "{'data': [[0, 0, 5, 13, 9, 1, 0, 0, 0, 0, 13, 16, 10, 16, 5, 0, 0, 3, 16, 2, 0, 11, 8, 0, 0, 4, 12, 0, 0, 8, 8, 0, 0, 5, 8, 0, 0, 9, 8, 0, 0, 4, 11, 0, 1, 12, 7, 0, 0, 2, 14, 5, 10, 12, 0, 0, 0, 0, 6, 13, 10, 0, 0, 0]], 'predict': [0], 'description': 'Resultado da previsao.', 'details': 'Profundidade 12'}\n",
+      "[0]\n",
       "200\n",
-      "{'data': [[0, 0, 5, 13, 9, 1, 0, 0, 0, 0, 13, 15, 10, 16, 5, 0, 0, 3, 15, 2, 0, 11, 8, 0, 0, 4, 12, 0, 0, 8, 8, 0, 0, 5, 8, 0, 0, 9, 8, 0, 0, 4, 11, 0, 1, 12, 7, 0, 0, 2, 15, 5, 10, 12, 0, 0, 0, 0, 6, 13, 11, 0, 0, 0]], 'predict': [0], 'description': 'Resultado da previsao.', 'details': 'Profundidade 12'}\n"
+      "[0]\n"
      ]
     }
    ],
@@ -54,7 +54,7 @@
     "            response = requests.post(url, json=data)\n",
     "            print(response.status_code)\n",
     "            result = response.json()\n",
-    "            print(result)\n",
+    "            print(result['predict'])\n",
     "        except requests.exceptions.HTTPError as http_err:\n",
     "            print(f\"{arquivo} -> erro de HTTP: {http_err}\")\n",
     "        except requests.exceptions.ConnectionError as conn_err:\n",
@@ -64,44 +64,6 @@
     "        except requests.exceptions.RequestException as req_err:\n",
     "            print(f\"{arquivo} -> erro: {req_err}\")\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'np_array' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m image \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(response\u001b[38;5;241m.\u001b[39mtext)\n\u001b[1;32m      7\u001b[0m plt\u001b[38;5;241m.\u001b[39mgray()\n\u001b[0;32m----> 8\u001b[0m plt\u001b[38;5;241m.\u001b[39mmatshow(\u001b[43mnp_array\u001b[49m)\n\u001b[1;32m      9\u001b[0m plt\u001b[38;5;241m.\u001b[39mshow()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'np_array' is not defined"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "#img_data = np.array(scaled_image_list, dtype=np.uint8)\n",
-    "# Reshape to 8x8\n",
-    "image = np.array(response.text)\n",
-    "\n",
-    "plt.gray()\n",
-    "plt.matshow(np_array)\n",
-    "plt.show()"
    ]
   }
  ],
