--- a/docs/relatorio_final.tex
+++ b/docs/relatorio_final.tex
@@ -53,29 +53,28 @@ Note que escolhemos não setar uma profundidade máxima pois o dataset é relati
 
 Abaixo vemos a matrix de confusão e a árvore resultando para os parâmetros escolhidos (linha marcada com *)
 \\
-\centering
+\begin{center}
 \includegraphics[height=0.28\textheight]{decision_tree_confusion_matrix.png}
 \\
-\centering
 \includegraphics[height=0.28\textheight]{decision_tree_plot.png}
-
+\end{center}
 
 \subsection{Exercício 2 - Avaliação dos ganhos com a utilização de modelos Ensemble}
 Vemos um ganho substancial de performance utilizando modelos Ensemble.
 
 Abaixo vemos dados de análise dos modelos Ensemble utilizados:
 
-Random Forest:\\
+Random Forest:
 \begin{itemize}
   \item criterion=log\_loss, precision=0.9701, training\_time=0.1876, max\_depth=None
   \item *criterion=entropy, precision=0.9722, training\_time=0.1848, max\_depth=None
   \item criterion=gini, precision=0.9722, training\_time=0.0960, max\_depth=None
 \end{itemize}
 
-XGBoost:\\
+XGBoost:
 \begin{itemize}
   \item max\_depth=5, training\_time=1.5073583126068115, precision=0.9666666666666667 
-  \item max\_depth=10, training\_time=1.6833817958831787, precision=0.9694444444444444
+  \item *max\_depth=10, training\_time=1.6833817958831787, precision=0.9694444444444444
   \item max\_depth=100, training\_time=1.5776081085205078, precision=0.969444444444444 
   \item max\_depth=1000, training\_time=1.555584192276001, precision=0.9694444444444444
 \end{itemize}
