Atualização dos notebooks utilizados no Projeto.

--- a/notebooks/cliente.ipynb
+++ b/notebooks/cliente.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'prediction': 0.0}\n"
+     ]
+    }
+   ],
    "source": [
     "import base64\n",
     "from PIL import Image\n",
     "import requests\n",
     "import io\n",
     "\n",
-    "img = Image.open('/workspaces/mba-deeplearning-iad-006-2024-public/imagens/imagem_negativa.png')\n",
+    "img = Image.open('/workspaces/mba-deeplearning-iad-006-2024-public/imagens/imagem_positiva_ruido.png')\n",
     "img = img.resize((8,8))\n",
     "\n",
     "buffered = io.BytesIO()\n",
